--- a/app/src/main/res/layout/yogurt_layout.xml
+++ b/app/src/main/res/layout/yogurt_layout.xml
@@ -11,6 +11,6 @@
         android:padding="10dp"
         android:id="@+id/yogurtName"
         android:textColor="#000"
-        android:text="jluyfghgkhgdfxcvgkgufyjdghfx"/>
+        android:text="mum i love you"/>
 
 </LinearLayout>
